Sprint 8 solution time and duration (#45)
#comment Refactor task management system to include new fields and improve functionality:

1. Introduce duration and startTime fields in BaseTask, SimpleTask, EpicTask, and Subtask.
2. Implement getEndTime method to calculate the end time based on start time and duration.
3. Calculate Epic's duration and startTime based on its subtasks.
4. Update serialization and deserialization methods to handle new fields (duration and startTime).
5. Sort tasks by priority using startTime and ensure tasks without startTime are excluded.
6. Validate task overlap to prevent tasks from having overlapping times.
7. Replace loops with Stream API to improve code readability and performance.
8. Add unit tests to verify Epic status calculation in various scenarios (NEW, DONE, mix, IN_PROGRESS).
9. Create tests for InMemoryTaskManager and FileBackedTaskManager to ensure proper handling of tasks, epics, and subtasks, and check overlap validation.
10. Add unit tests for HistoryManager covering empty history, duplicate handling, and removal scenarios.

Affected: BaseTask, SimpleTask, EpicTask, Subtask, FileBackedTaskManager, InMemoryTaskManager, EpicTaskTest, InMemoryTaskManagerTest, FileBackedTaskManagerTest, TaskManagerTest, InMemoryHistoryManagerTest, tasks.csv, Main, TaskManager, InMemoryHistoryManager